grammar.js
    source_file: $ => repeat(choice(
      $._definition,
      $._declaration,
    )),

    _definition: $ => choice(
      $.program_definition,
      $.action_definition,
      $.function_definition,
      $.function_block_definition,
      $.method_definition,
      $.type_definition,
      $.struct_definition,
      $.union_definition,
      $.enum_definition,
      $.body_only_definition,
    ),

    _declaration: $ => choice(
      $.var_declaration,
      $.var_input_declaration,
      $.var_output_declaration,
      $.var_in_out_declaration,
      $.var_global_declaration,
      $.var_temp_declaration,
      $.var_stat_declaration,
      $.var_external_declaration,
      $.var_instance_declaration,
      $.var_access_declaration,
      $.var_config_declaration,
      $.var_generic_constant_declaration,
    ),

    program_definition: $ => seq(
      'PROGRAM',
      field('programName', $.identifier),
      repeat($._declaration),
      repeat($.statement),
      'END_PROGRAM'
    ),

    body_only_definition: $ => seq(
      $.statement,
      repeat($.statement),
    ),

    var_declaration: $ => seq(
      'VAR',
      optional($.variable_attribute),
      repeat($.constant),
      'END_VAR'
    ),

    assignment: $ => seq(
      $.variable,
      ':=',
      $._expression,
      ';'
    ),


    expression_statement: $ => seq($.variable, ';'),

    if_statement: $ => seq(
      'IF',
      field('condition', $._expression),
      'THEN',
      repeat($.statement),
      repeat($.elseif_clause),
      optional($.else_clause),
      'END_IF',
      optional(';')
    ),

    case_statement: $ => seq(
      'CASE',
      field('caseControlValue', $.variable),
      'OF',
      repeat($.case),
      optional($.else_case),
      'END_CASE',
      optional(';')
    ),

    elseif_clause: $ => seq(
      'ELSIF',
      field('elsifCondition', $._expression),
      'THEN',
      repeat($.statement)
    ),

    else_clause: $ => seq(
      'ELSE',
      repeat($.statement)
    ),

    case: $ => seq(
      $.case_value,
      ':',
      repeat($.statement)
    ),

    else_case: $ => seq(
      'ELSE',
      repeat($.statement)
    ),

    case_value: $ => commaSep1(choice(
      alias(token(signedInteger), $.integer),
      $.index_range,
      $.identifier
    )),

    index_range: $ => seq(
      field('lowerBound', choice(alias(token(signedInteger), $.integer), $.identifier)),
      '..',
      field('upperBound', choice(alias(token(signedInteger), $.integer), $.identifier))
    ),

    constant: $ => seq(
      field('name', $.identifier),
      ':',
      $._data_type,
      optional($.variable_initialization),
      ';',
    ),

    /*
      Declaration components
    */
    _expression: $ => choice(
      $._literal,
      $.variable,
      $.parenthesis_expression,
      $.unary_expression,
      $.binary_expression,
      $.mask_expression,
      $.call_expression
    ),

    unary_expression: $ => prec(6, choice(
      seq('NOT', $._expression),
      seq('+', $._expression),
      seq('-', $._expression)
    )),

    call_expression: $ => seq(
      field('functionName', choice($.builtin_function, $.builtin_variable, $.identifier)),
      optional($.index), // Only for function block instances
      '(',
      commaSep(field('input', choice($.parameter_assignment, $._expression))), // Function calls have ordered lists allowing expressions
      ')'
    ),

    variable: $ => seq(
      field('name', $.identifier),
      optional($.index),
      optional($.structure_member)
    ),

    structure_member: $ => seq(token.immediate('.'), choice($.variable, $.call_expression)),

    /*
      Data types
    */
    _data_type: $ => choice(
      $.basic_data_type,
      alias($._identifier_path, $.derived_data_type),
      $.array_type,
      $.pointer_type,
      $.reference_type,
    ),

    basic_data_type: $ => choice(
      'BOOL',
      /U?[SD]?INT/,
      /L?REAL/,
      'TIME',
      'DATE',
      'TIME_OF_DAY',
      'TOD',
      'DATE_AND_TIME',
      'DT',
      /W?STRING(\(\d+\))?/,
      'BYTE',
      /D?WORD/
    ),

    pointer_type: $ => seq(
      'POINTER',
      'TO',
      $._data_type,
    ),

    integer: $ => {
      return token(unsignedInteger);
    },

    floating_point: $ => {
      const scientific = seq(/[eE]/, signedInteger);
      return token(seq(
        unsignedInteger,
        choice(
          seq(
            '.',
            repeat(choice('_', /\d/)),
            optional(scientific)
          ),
          scientific
        )
      ));
    },

    time: $ => token(seq(
      'T#',
      optional('-'),
      optional(/\d{1,2}[dD]/),
      optional(/\d{1,3}[hH]/),
      optional(/\d{1,5}[mM]/),
      optional(/\d{1,9}[sS]/),
      optional(/\d{1,9}((ms)|(MS))/)
    )),

    string: $ => seq(
      '\'',
      repeat($._string_content),
      '\''
    ),

    _string_content: $ => prec.right(repeat1(
      choice(
        alias(token.immediate(prec(1, /[^'"$\n]+/)), $.string_content),
        $.escape_sequence,
        // /[^'"$]{1}/,
      ))),

    escape_sequence: _ => token.immediate(prec(1, seq(
      '$',
      choice(
        /[a-fA-F\d]{2}/,
        /['"rnltpRNLTP$]/,
      ),
    ))),

    identifier: $ => /[a-zA-Z_]\w*/,
