test/corpus/control_statements.txt
==============
Case Statement
==============

PROGRAM Main
CASE State OF
	-1, 0, 1: 
	2..VAR_1, 9:
	1_1, 1_2:
	13, VAR_2, 14:
		x := 5;
		x := 6;
		x := 7;
	ELSE
		y := -1;
END_CASE
END_PROGRAM

---

(source_file
  (program_definition
    (identifier)
    (case_statement
      (variable
        (identifier))
      (case
        (case_value
          (integer)
          (integer)
          (integer)))
      (case
        (case_value
          (index_range
            (integer)
            (identifier))
          (integer)))
      (case
        (case_value
          (integer)
          (integer)))
      (case
        (case_value
          (integer)
          (identifier)
          (integer))
        (assignment
          (variable
            (identifier))
          (integer))
        (assignment
          (variable
            (identifier))
          (integer))
        (assignment
          (variable
            (identifier))
          (integer)))
      (else_case
        (assignment
          (variable
            (identifier))
          (unary_expression
            (integer)))))))
